fix bookmarks and section spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -124,5 +124,4 @@ img, image {
 
 section {
   margin: 1rem;
-  min-height: 70vh;
 }
